cluster/apps/default/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name prowlarr
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: ghcr.io/k8s-at-home/prowlarr-develop:v0.4.3.1921
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 250Mi
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 5
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
