cluster/apps/default/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - name: http
      protocol: TCP
      port: 9696
      targetPort: http
  type: ClusterIP
